--- a/src/style.css
+++ b/src/style.css
@@ -203,7 +203,7 @@ html {
   }
   
   /* --------- */
-  /* Home section */
+  /*  section */
   /* --------- */
   .wave {
     animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
@@ -256,7 +256,7 @@ html {
     z-index: -1;
     background-position: top center;
     background-repeat: no-repeat;
-    padding-bottom: 30px !important;
+    padding-bottom: 0px !important;
     padding-top: 30px !important;
   }
   
